﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Minor]
 - Start using Git::Contributors.

 [Dependencies::Stats]
 - Dependencies changed since 2.016008, see misc/*.deps* for details
 - develop: +1
 - runtime: +1

2.016008 2014-08-11T10:42:36Z
 [00 Minor]
 - dep_utils: fail better when build/master doesn't exist
 - dep_utils: try use META.yml if META.json doesn't exist
 - tests: update reportversions test

 [Dependencies::Stats]
 - Dependencies changed since 2.016007, see misc/*.deps* for details
 - develop: ↑4
 - runtime: ↑6
 - test: ↑1 -2

2.016007 2014-08-01T12:30:36Z
 [00 Minor]
 - dep_utils: continued refactoring, now based on simple CPAN::Changes::Dependencies::Details

 [Dependencies::Stats]
 - Dependencies changed since 2.016006, see misc/*.deps* for details
 - develop: ↑2
 - runtime: ↑2 (recommends: +1 -1)
 - test: ↑1 -1

2.016006 2014-07-30T04:27:01Z
 [Bug Fixes]
 - dep_utils: Less aggressive caching because [ commitish , path ] being cached can lead to wrong results.
 - tests: don't fail on newer dzil

 [Dependencies::Stats]
 - Dependencies changed since 2.016005, see misc/*.deps* for details
 - configure: ↓1
 - develop: ↑19
 - runtime: ↑22
 - test: ↑1 -1 (recommends: -2)

2.016005 2014-07-27T06:49:27Z
 [00 Minor]
 - dep_utils: Cache misc lookup calls to git for speed.
 - dep_utils: Use new CPAN::Changes attach syntax
 - dep_utils: Use new group Dependencies::Details

 [Dependencies::Stats]
 - Dependencies changed since 2.016004, see misc/*.deps* for details
 - develop: ↑10
 - runtime: ↑11 (recommends: +4 ↑1)
 - test: +3 ↑2 (recommends: +1 ↑1)

2.016004 2014-07-16T12:05:55Z
 [00 Minor]
 - dep_utils: Factor out primary summary logic into its own dist.

 [Dependencies::Stats]
 - Dependencies changed since 2.016003, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1 (recommends: +1)

2.016003 2014-07-15T09:01:30Z
 [00 Minor]
 - dep_utils: avoid annoying deprecation warning about { chars

 [Dependencies::Stats]