@@ -4,6 +4,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Added / develop requires]
  - Dist::Zilla::Plugin::Git::Contributors 0.004
 
+ [Added / runtime recommends]
+ - Data::Serializer::Sereal
+
  [Added / runtime requires]
  - Dist::Zilla::Plugin::Git::Contributors 0.004
 
