@@ -3,11 +3,15 @@
 {{$NEXT}}
  [00 Minor]
  - Start using Git::Contributors.
+ - dep_changes: more cache levels
+ - dep_changes: cache loaded CPAN::Meta objects for unique file SHAs
+ - dep_changes: use Sereal for the CHI cache serializer.
+ - dep_changes: group per-location caches by directory with cwd + base64 filter
 
  [Dependencies::Stats]
  - Dependencies changed since 2.016008, see misc/*.deps* for details
  - develop: +1
- - runtime: +1
+ - runtime: +1 (recommends: +1)
 
 2.016008 2014-08-11T10:42:36Z
  [00 Minor]
